Переписали open api yml Изменили генерацию на только интерфейсы Перенес и маппинг из сервисного слоя в контроллер
